docs/pages/versions/v56.0.0/sdk/ui/swift-ui/list.mdx
---
title: 列表
description: 一个用于显示可滚动项目列表的 SwiftUI 列表组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** 有关跨平台用法，请参阅通用的 [`List`](../universal/list) — 它会为每个平台渲染相应的原生组件。

Expo UI List 与官方 SwiftUI [List API](https://developer.apple.com/documentation/swiftui/list) 保持一致，并支持通过 [`listStyle`](modifiers/#liststylestyle) 修饰符、各种行/分组修饰符，以及选择、重新排序和编辑功能进行样式定制。

> **info** `List` 目前还不会延迟渲染行：React 会预先创建每一行，因此大型列表在挂载时可能会比较慢。我们正在改进这一点。对于大型列表，我们建议使用 [FlashList](https://shopify.github.io/flash-list/) 或 [Legend List](https://github.com/LegendApp/legend-list)。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/list/ios-light.webp"
  darkSrc="/static/images/expo-ui/list/ios-dark.webp"
  alt="一个列表，包含 Favorites 和 Recents 分组，每一行都显示一个彩色 SF Symbol 图标和一个标签"
/>

## 安装

<APIInstallSection />

## 用法

### 基础列表

```tsx BasicListExample.tsx
import { Host, List, Text, Section } from '@expo/ui/swift-ui';

export default function BasicListExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="水果">
          <Text>苹果</Text>
          <Text>香蕉</Text>
          <Text>橙子</Text>
        </Section>
        <Section title="蔬菜">
          <Text>胡萝卜</Text>
          <Text>西兰花</Text>
          <Text>菠菜</Text>
        </Section>
      </List>
    </Host>
  );
}
```

### 带标签和图标的列表

```tsx ListWithLabelsExample.tsx
import { Host, List, Label, Section } from '@expo/ui/swift-ui';

export default function ListWithLabelsExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="设置">
          <Label title="Wi-Fi" systemImage="wifi" />
          <Label title="蓝牙" systemImage="antenna.radiowaves.left.and.right" />
          <Label title="蜂窝网络" systemImage="antenna.radiowaves.left.and.right.circle" />
        </Section>
      </List>
    </Host>
  );
}
```

### 列表样式

使用 [`listStyle`](modifiers/#liststylestyle) 修饰符来更改列表的外观。

> **注意：** `inset`、`insetGrouped` 和 `sidebar` 样式在 tvOS 上不可用。

```tsx ListStylesExample.tsx
import { useState } from 'react';
import { Host, List, Text, Section, Picker } from '@expo/ui/swift-ui';
import { listStyle, pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const styles = ['automatic', 'plain', 'inset', 'insetGrouped', 'grouped', 'sidebar'] as const;

export default function ListStylesExample() {
  const [styleIndex, setStyleIndex] = useState(0);

  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[listStyle(styles[styleIndex])]}>
        <Section title="样式选择器">
          <Picker
            label="列表样式"
            selection={styleIndex}
            onSelectionChange={setStyleIndex}
            modifiers={[pickerStyle('menu')]}>
            {styles.map((style, index) => (
              <Text key={style} modifiers={[tag(index)]}>
                {style}
              </Text>
            ))}
          </Picker>
        </Section>
        <Section title="示例项目">
          <Text>项目 1</Text>
          <Text>项目 2</Text>
          <Text>项目 3</Text>
        </Section>
      </List>
    </Host>
  );
}
```

### 选择与编辑模式

使用带有 `onDelete` 和 `onMove` 属性的 [`List.ForEach`](#listforeach) 复合组件，可启用列表项的选择、删除和重新排序。

- 使用 [`environment`](modifiers/#environmentkey-value) 修饰符启用编辑模式
- 使用 [`tag`](modifiers/#tagtag) 修饰符标识项目
- 使用 [`selection`](#selection) 属性控制选中的项目
- 使用 [`moveDisabled`](modifiers/#movedisableddisabled) 和 [`deleteDisabled`](modifiers/#deletedisableddisabled) 修饰符，禁用单个项目的移动和删除操作

```tsx EditableListExample.tsx
import { useState } from 'react';
import { Host, List, Label, Section, Button, Toggle } from '@expo/ui/swift-ui';
import { environment, tag } from '@expo/ui/swift-ui/modifiers';

type Task = { id: string; title: string };

const INITIAL_TASKS: Task[] = [
  { id: '1', title: '任务 1' },
  { id: '2', title: '任务 2' },
  { id: '3', title: '任务 3' },
  { id: '4', title: '任务 4' },
];

export default function EditableListExample() {
  const [tasks, setTasks] = useState<Task[]>(INITIAL_TASKS);
  const [selectedIds, setSelectedIds] = useState<string[]>([]);
  const [editMode, setEditMode] = useState(false);

  const handleDelete = (indices: number[]) => {
    setTasks(prev => prev.filter((_, i) => !indices.includes(i)));
  };

  const handleMove = (sourceIndices: number[], destination: number) => {
    setTasks(prev => {
      const newTasks = [...prev];
      const [removed] = newTasks.splice(sourceIndices[0], 1);
      const adjustedDest = sourceIndices[0] < destination ? destination - 1 : destination;
      newTasks.splice(adjustedDest, 0, removed);
      return newTasks;
    });
  };

  return (
    <Host style={{ flex: 1 }}>
      <List
        selection={selectedIds}
        onSelectionChange={ids => setSelectedIds(ids.map(String))}
        modifiers={[environment('editMode', editMode ? 'active' : 'inactive')]}>
        <Section title="设置">
          <Toggle label="编辑模式" isOn={editMode} onIsOnChange={setEditMode} />
        </Section>
        <Section title="任务">
          <List.ForEach onDelete={handleDelete} onMove={handleMove}>
            {tasks.map(task => (
              <Label key={task.id} title={task.title} modifiers={[tag(task.id)]} />
            ))}
          </List.ForEach>
        </Section>
      </List>
    </Host>
  );
}
```

### 下拉刷新

使用 [`refreshable`](modifiers/#refreshablehandler) 修饰符启用下拉刷新功能。

```tsx RefreshableListExample.tsx
import { useState } from 'react';
import { Host, List, Text, Section } from '@expo/ui/swift-ui';
import { refreshable } from '@expo/ui/swift-ui/modifiers';

export default function RefreshableListExample() {
  const [lastRefresh, setLastRefresh] = useState<Date | null>(null);

  const handleRefresh = async () => {
    // 模拟异步数据获取
    await new Promise(resolve => setTimeout(resolve, 1500));
    setLastRefresh(new Date());
  };

  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[refreshable(handleRefresh)]}>
        <Section title="数据">
          <Text>下拉以刷新</Text>
          {lastRefresh && <Text>上次刷新：{lastRefresh.toLocaleTimeString()}</Text>}
        </Section>
      </List>
    </Host>
  );
}
```

### 行样式

使用 [`listRowBackground`](modifiers/#listrowbackgroundcolor)、[`listRowSeparator`](modifiers/#listrowseparatorvisibility-edges) 和 [`listRowInsets`](modifiers/#listrowinsetsparams) 修饰符来自定义单独的行。

```tsx RowStylingExample.tsx
import { Host, List, Text, Section } from '@expo/ui/swift-ui';
import { listRowBackground, listRowSeparator, listRowInsets } from '@expo/ui/swift-ui/modifiers';

export default function RowStylingExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List>
        <Section title="样式化行">
          <Text modifiers={[listRowBackground('blue')]}>蓝色背景</Text>
          <Text modifiers={[listRowSeparator('hidden')]}>隐藏分隔线</Text>
          <Text modifiers={[listRowInsets({ leading: 40 })]}>额外的前导内边距</Text>
          <Text modifiers={[listRowInsets({ leading: 0, trailing: 0 })]}>无水平内边距</Text>
        </Section>
      </List>
    </Host>
  );
}
```

### 键盘收起行为

使用 [`scrollDismissesKeyboard`](modifiers/#scrolldismisseskeyboardmode) 修饰符控制滚动时键盘的收起方式。

```tsx KeyboardDismissExample.tsx
import { Host, List, Section, TextField } from '@expo/ui/swift-ui';
import { scrollDismissesKeyboard } from '@expo/ui/swift-ui/modifiers';

export default function KeyboardDismissExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[scrollDismissesKeyboard('interactively')]}>
        <Section title="表单">
          <TextField placeholder="姓名" />
          <TextField placeholder="邮箱" />
          <TextField placeholder="电话" />
        </Section>
      </List>
    </Host>
  );
}
```

### 标题突出程度

使用 [`headerProminence`](modifiers/#headerprominenceprominence) 修饰符调整分组标题的视觉突出程度。

```tsx HeaderProminenceExample.tsx
import { Host, List, Text, Section } from '@expo/ui/swift-ui';
import { headerProminence } from '@expo/ui/swift-ui/modifiers';

export default function HeaderProminenceExample() {
  return (
    <Host style={{ flex: 1 }}>
      <List modifiers={[headerProminence('increased')]}>
        <Section title="重要分组">
          <Text>此分组的标题突出程度更高</Text>
        </Section>
        <Section title="另一个分组">
          <Text>标题更加醒目</Text>
        </Section>
      </List>
    </Host>
  );
}
```

## API

```tsx
import { List } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/list" apiName="List" />
